# kboard

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/kboard/: app.py  config.py  console.py  container.py  enums.py  exceptions.py  models.py  settings.py  utils.py  views.py
src/kboard/board/: renderer.py  service.py
src/kboard/commands/: backlog.py  board.py  configure.py  task.py
src/kboard/common/: display_service.py
src/kboard/config/: service.py
src/kboard/db/: engine.py  init.py
src/kboard/renderers/: board_renderer.py  message_renderer.py  task_renderer.py
src/kboard/repos/: board_repo.py  config_repo.py  task_repo.py
src/kboard/services/: board_service.py  config_service.py  display_service.py  task_service.py
src/kboard/task/: renderer.py  service.py
