[project]
name = "kboard"
version = "0.1.0"
description = "Console-based Kanban task manager created in Python."
authors = [
    {name = "Óscar Miranda", email = "oscarmiranda3615@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["kanban", "board", "project", "management", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">=3.14.2"
dependencies = [
    "typer (>=0.21.1,<0.22.0)",
    "rich (>=14.3.2,<15.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)"
]

[project.urls]
homepage = "https://github.com/OscarM3615/kboard/"
repository = "https://github.com/OscarM3615/kboard/"

[project.scripts]
kb = 'kboard.app:app'

[tool.poetry]
packages = [{include = "kboard", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
